# game-of-life

./: Cargo.toml
src/: constants.rs  main.rs  message.rs  payload.rs  protocol.rs  socket.rs  state.rs  utils.rs
src/patterns/: gol.rs  gol_archive.rs  gol_simd.rs  gol_threads.rs  mlp.rs  mod.rs
static/: index.html  ws-client.js
