[package]
name = "gol-htmx-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-tws = "0.5"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures = "0.3"
anyhow = "1"
bytes = "1"
tower-http = { version = "0.4", features = ["fs"] }
tower = "0.5.2"
axum_static = "1.7.1"
rand = "0.9.1"
chrono = "0.4.41"
