[package]
name = "gol-htmx-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-tws = "0.5"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3"
anyhow = "1"
axum_static = "1.7.1"
rand = "0.9.1"
chrono = "0.4.41"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.21.3"

[dev-dependencies]
tracing-test = "0.2" # for tests
